--- a/100levelmbbs.html
+++ b/100levelmbbs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./level.css">
+    <link rel="stylesheet" href="./login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -35,7 +35,7 @@
                       </button>
                             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                                 <div class="offcanvas-header">
-                                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">wikibhu</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body">
@@ -43,9 +43,7 @@
                                         <li class="nav-item">
                                             <a class="nav-link active" aria-current="page" href="./index.html"><i class="uil uil-home"></i>Home</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#"><i class="uil uil-book-alt"></i>Take a test</a>
-                                        </li>
+                                       
                                         <li class="nav-item">
                                             <a class="nav-link" href="./login.php"><i class="uil uil-book-alt"></i>Login</a>
                                         </li>
@@ -62,9 +60,10 @@
                                                 <li>
                                                     <hr class="dropdown-divider">
                                                 </li>
-                                                <li><a class="dropdown-item" href="./index.html">Logout</a></li>
+                                                <li><a class="dropdown-item" href="./bhu.html">Logout</a></li>
                                             </ul>
-
+                                        </li>
+                                    </ul>
                                         </li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
